--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <div class="video-container">
         <video id="my-video" class="video-js vjs-default-skin" controls autoplay preload="auto" playsinline>
-            <source src="https://xiaolin.live/wowhaha.php?m3u8=https://livecdn.rumsport.com/stream/33/index.m3u8&id=2076&token=68c1ad866cda6f245c3a1485b15e9b9e3b4bd95c.true.1739901600-eAXwvIUkMB3CQqjIS79DqqKa4nToYTmJmV1chyn2g2k=&ver=2899855&parent=amzfutbol.com&is_vip=true&image=https://img.amzfutbol.com/static/common/img/matchs/1629417399.jpg&matchdate=1741528800" type="application/x-mpegURL">
+            <source src="https://dffgtrde.vffddd.online:443/bein5/tracks-v1a1/mono.ts.m3u8" type="application/x-mpegURL">
         </video>
     </div>
 
