--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <div class="video-container">
         <video id="my-video" class="video-js vjs-default-skin" controls autoplay preload="auto" playsinline>
-            <source src="https://dffgtrde.vffddd.online:443/bein5/tracks-v1a1/mono.ts.m3u8" type="application/x-mpegURL">
+            <source src="https://rgelive.akamaized.net/hls/live/2043151/radiolive/playlistBU_2_.m3u8" type="application/x-mpegURL">
         </video>
     </div>
 
